[FIX] html_builder, *: parametrize the "mobile" media breakpoint
Prior to this commit, `lg` bootstrap media breakpoint (992px) was hardcoded in
the html Builder. However it is not adequate for MassMailing as the content will
be displayed in its "mobile" form while the width of the screen is still large
enough to be displayed in its "desktop" form. This is particularly notable in
the Form view which allows a large amount of space for the chatter.

This commit parametrize a `mobileBreakpoint` so that `md` can be provided
instead. `lg` will still be used in website and by default, whilst
`mass_mailing` will use `md`.

This change is reflected in all snippets/templates/plugins/tools used by
`mass_mailing`.

task-4247642

Co-authored-by: Damien Abeloos <abd@odoo.com>
Co-authored-by: Thomas Josse <thjo@odoo.com>

--- a/addons/mass_mailing/static/src/snippets/s_alert/000.scss
+++ b/addons/mass_mailing/static/src/snippets/s_alert/000.scss
@@ -1,4 +1,4 @@
-.o_mail_snippet_general .s_mail_alert [class^="col-lg"]{
+.o_mail_snippet_general .s_mail_alert [class^="col-md"]{
     padding-left: 0!important;
     padding-right: 0!important;
 }
