--- a/addons/mass_mailing/views/themes_templates.xml
+++ b/addons/mass_mailing/views/themes_templates.xml
@@ -28,13 +28,13 @@
         <section class="s_header_logo o_mail_block_header_logo o_mail_snippet_general pt16 pb16" data-snippet="s_header_logo" data-name="Centered Logo">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4"/>
-                    <div class="col-lg-4" style="text-align: center;">
+                    <div class="col-md-4"/>
+                    <div class="col-md-4" style="text-align: center;">
                         <a t-att-href="(company_id.website) or '#'" style="text-decoration:none;" target="_blank">
                             <img border="0" src="/mass_mailing/static/src/img/theme_default/s_default_image_header_logo.png" data-original-src="/mass_mailing/static/src/img/theme_default/s_default_image_header_logo.png" style="height:auto; max-width:100%;" width="180" class="img-fluid"/>
                         </a>
                     </div>
-                    <div class="col-lg-4" style="text-align: right;"/>
+                    <div class="col-md-4" style="text-align: right;"/>
                 </div>
             </div>
         </section>
