[FIX] account: flexible name search on taxes
Issue:
- Searching for a tax by its name is not flexible.
- Users have to type the exact name of a tax to find it.

Fix:
Allow using the shortcut feature with both `name` and `display_name`.
The field `name_searchable` is deprecated as it can be implemented
without that field now.

Impact:
- Improves user experience by allowing tax searches using partial or approximate
  name inputs.
- For example, typing '21s' will return all relevant results like '21% S' and
  similar matches.

task-5046098

X-original-commit: e478c5ee7ef8549fcef55ea7056b6cc59ce9eb60

--- a/addons/account/views/account_tax_views.xml
+++ b/addons/account/views/account_tax_views.xml
@@ -97,7 +97,7 @@
             <field name="model">account.tax</field>
             <field name="arch" type="xml">
                 <search string="Search Taxes">
-                    <field name="name_searchable" string="Name"/>
+                    <field name="name" string="Name"/>
                     <field name="description"/>
                     <field name="company_id" groups="base.group_multi_company"/>
                     <field name="fiscal_position_ids"/>
