[FIX] website: adapt test test_tour
This commit re-enables the test_tour test, which was broken and skipped
due to the DOM changes introduced by the new Website Builder. It also
adapts the tour selectors accordingly.

closes odoo/odoo#211602

Signed-off-by: Francois Georis (fge) <fge@odoo.com>
Co-authored-by: visp-odoo <visp@odoo.com>

--- a/addons/website/static/src/builder/plugins/form/form_option.xml
+++ b/addons/website/static/src/builder/plugins/form/form_option.xml
@@ -303,7 +303,7 @@
                 <BuilderSelectItem dataAttributeActionValue="'!selected'">Is not equal to</BuilderSelectItem>
             </BuilderSelect>
         </div>
-        <div class="d-flex position-relative p-1 px-2 ps-3 hb-row">
+        <div class="d-flex position-relative p-1 px-2 ps-3 hb-row" data-name="hidden_condition_additional_text">
             <BuilderSelect t-if="state.conditionValueList and (domStateDependency.type === 'checkbox' || domStateDependency.type === 'radio' || domStateDependency.nodeName === 'SELECT')"
                 id="'hidden_condition_no_text_opt'" preview="false" dataAttributeAction="'visibilityCondition'"
             >
