[IMP] html_builder: do stuff add builder overlay panel
shadow option in builder overlay panel

 background option  in builder overlay panel

shape option in builder overlay panel

--- a/addons/html_builder/static/src/plugins/shape/shape_selector.scss
+++ b/addons/html_builder/static/src/plugins/shape/shape_selector.scss
@@ -24,6 +24,10 @@
     }
 }
 
+.shape-category-title {
+    background-color: $o-we-bg-light;
+}
+
 .builder_select_page {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
