--- a/addons/stock/views/stock_move_views.xml
+++ b/addons/stock/views/stock_move_views.xml
@@ -184,11 +184,9 @@
                         context="{'default_location_id': location_id, 'default_product_id': product_id, 'search_view_ref': 'stock.quant_search_view', 'list_view_ref': 'stock.view_stock_quant_tree', 'form_view_ref': 'stock.view_stock_quant_form', 'readonly_form': True}"
                         widget="pick_from"
                         column_invisible="not parent.show_quant"
-                        options="{'no_create': True, 'no_open': True}"
-                        readonly="is_entire_pack"/>
+                        options="{'no_create': True, 'no_open': True}"/>
                     <field name="lot_id" groups="stock.group_production_lot"
                         column_invisible="parent.show_quant or parent.has_tracking == 'none' or not parent.show_lots_m2o"
-                        readonly="is_entire_pack"
                         domain="[('product_id', '=', parent.product_id), '|', ('company_id', '=', company_id), ('company_id', '=', False)]"
                         context="{
                             'active_picking_id': picking_id,
@@ -196,22 +194,21 @@
                         }"/>
                     <field name="lot_name" string="Lot/Serial Number" groups="stock.group_production_lot"
                         placeholder="e.g. SN000001"
-                        column_invisible="parent.has_tracking == 'none' or not parent.show_lots_text"
-                        readonly="is_entire_pack"/>
+                        column_invisible="parent.has_tracking == 'none' or not parent.show_lots_text"/>
                     <field name="location_dest_id" string="Store To"
                         column_invisible="parent.show_quant and parent.picking_code != 'internal'"
                         domain="[('id', 'child_of', parent.location_dest_id), '|', ('company_id', '=', False), ('company_id', '=', company_id), ('usage', '!=', 'view')]"
                         groups="stock.group_stock_multi_locations"/>
-                    <field name="package_id" column_invisible="1" readonly="(state == 'done' and is_locked) or is_entire_pack" groups="stock.group_tracking_lot"/>
-                    <field name="result_package_id" readonly="(state == 'done' and is_locked) or is_entire_pack" widget="package_m2o" groups="stock.group_tracking_lot" context="{'picking_id': picking_id, 'show_dest_package': 1}"/>
-                    <field name="owner_id" column_invisible="parent.show_quant" readonly="is_entire_pack" groups="stock.group_tracking_owner"/>
+                    <field name="package_id" column_invisible="1" readonly="state == 'done' and is_locked" groups="stock.group_tracking_lot"/>
+                    <field name="result_package_id" readonly="state == 'done' and is_locked" widget="package_m2o" groups="stock.group_tracking_lot" context="{'picking_id': picking_id, 'show_dest_package': 1}"/>
+                    <field name="owner_id" column_invisible="parent.show_quant" groups="stock.group_tracking_owner"/>
                     <field name="state" column_invisible="True"/>
                     <field name="is_locked" column_invisible="True"/>
                     <field name="picking_code" column_invisible="True"/>
                     <field name="picked" column_invisible="True"/>
-                    <field name="quantity" string="Quantity" readonly="(state == 'done' and is_locked) or is_entire_pack" sum="Quantity"/>
+                    <field name="quantity" string="Quantity" readonly="state == 'done' and is_locked" sum="Quantity"/>
                     <field name="product_uom_id" options="{'no_open': True, 'no_create': True}" groups="uom.group_uom" widget="many2one_uom"
-                        readonly="is_entire_pack or (state == 'done' and id)"/>
+                        readonly="state == 'done' and id"/>
                 </list>
             </field>
         </record>
@@ -249,7 +246,7 @@
                     <field name="owner_id" groups="stock.group_tracking_owner" column_invisible="context.get('picking_code') == 'incoming'" readonly="state in ('done', 'cancel') and is_locked" />
                     <field name="state" column_invisible="True"/>
                     <field name="is_locked" column_invisible="True"/>
-                    <field name="quantity" readonly="(state in ('done', 'cancel') and is_locked) or is_entire_pack" force_save="1"/>
+                    <field name="quantity" readonly="state in ('done', 'cancel') and is_locked" force_save="1"/>
                     <field name="product_uom_id" force_save="1" readonly="state != 'draft' and id" groups="uom.group_uom" widget="many2one_uom"/>
                 </list>
             </field>
