--- a/addons/google_calendar/views/res_users_views.xml
+++ b/addons/google_calendar/views/res_users_views.xml
@@ -25,4 +25,18 @@
             </field>
         </record>
 
+        <record id="res_users_view_form_preferences" model="ir.ui.view">
+            <field name="name">res.users.preferences.form.inherit</field>
+            <field name="model">res.users</field>
+            <field name="inherit_id" ref="base.view_users_form_simple_modif"/>
+            <field name="arch" type="xml">
+                <xpath expr="//separator[@name='calendar_synchronization']" position="attributes">
+                    <attribute name="invisible">0</attribute>
+                </xpath>
+                <xpath expr="//widget[@name='calendar_sync_buttons']" position="attributes">
+                    <attribute name="invisible">0</attribute>
+                </xpath>
+            </field>
+        </record>
+
 </odoo>
