[IMP] stock_account: Interface to explain a move valuation
The purpose is to help the user to know from where the valuation
is computed

Part-of: odoo/odoo#225081
Related: odoo/enterprise#93678
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock_account/views/stock_move_views.xml
+++ b/addons/stock_account/views/stock_move_views.xml
@@ -19,7 +19,7 @@
         <field name="priority">1000</field>
         <field name="arch" type="xml">
             <list>
-                <field name="reference" width="15%;"/>
+                <field name="reference"/>
                 <field name="date"/>
                 <field name="quantity"/>
                 <field name="product_uom" groups="uom.group_uom"/>
