--- a/addons/stock_account/views/product_value_views.xml
+++ b/addons/stock_account/views/product_value_views.xml
@@ -9,17 +9,19 @@
                 <field name="move_id" invisible="1"/>
                 <field name="currency_id" invisible="1"/>
                 <group>
-                    <label for="current_value" class="oe_inline"/>
-                    <div class="d-flex gap-2 align-items-baseline hover-show">
-                        <field name="current_value" style="width: 100px;" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
-                        <span><field name="current_value_details" class="oe_inline me-5"/></span>
-                    </div>
-                    <label for="current_value_description" string=""/>
-                    <div class="text-muted">
-                        <field name="current_value_description"/>
-                    </div>
-                    <field name="value" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
-                    <field name="description"/>
+                    <group>
+                        <label for="current_value" class="oe_inline"/>
+                        <div class="oe_inline">
+                            <field name="current_value" style="width: 100px;" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
+                            <span><field name="current_value_details" class="oe_inline me-5"/></span>
+                        </div>
+                        <field name="value" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}"/>
+                        <field name="description"/>
+                    </group>
+                    <group>
+                        <field class="alert alert-info" role="alert" name="current_value_description" nolabel="1" colspan="2"/>
+                        <field class="alert alert-info" role="alert" name="computed_value_description" nolabel="1" colspan="2" invisible="not computed_value_description"/>
+                    </group>
                 </group>
                 </sheet>
             </form>
