[IMP] stock{,_picking_batch}: always enable show entire packs
Outside of `stock_barcode`, we want to always consider the
`show_entire_packs` enabled, as this is mostly for barcode display
purposes that this setting was kept.

This means we always allow the addition of entire packs regardless of
this setting, and its configuration is now moved in the 'Barcode App'
tab instead.

Task-4314600

closes odoo/odoo#225184

Related: odoo/enterprise#93733
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock/views/stock_package_views.xml
+++ b/addons/stock/views/stock_package_views.xml
@@ -96,7 +96,7 @@
         <field name="name">stock.package.list.editable</field>
         <field name="model">stock.package</field>
         <field name="arch" type="xml">
-            <list editable="bottom" create="0" js_class="stock_add_package_list_view" open_form_view="1">
+            <list editable="bottom" js_class="stock_add_package_list_view" open_form_view="1">
                 <header>
                     <button class="btn-primary" name="action_put_in_pack" type="object" string="Put in Pack"/>
                     <button class="btn-secondary" name="action_remove_package" type="object" string="Remove"/>
