--- a/addons/hr/views/hr_employee_views.xml
+++ b/addons/hr/views/hr_employee_views.xml
@@ -382,7 +382,7 @@
                                                 domain="['|', ('country_id', '=', False), ('country_id', '=', company_country_id)]"/>
 
                                         <separator name="schedule" string="Schedule"/>
-                                        <field name="resource_calendar_id" help="The default working hours are set in configuration."/>
+                                        <field name="resource_calendar_id" help="The default working hours are set in configuration." placeholder="Flexible"/>
                                     </group>
                                 </group>
                             </page>
