[IMP] account, sale, purchase: make `parent_id` non-stored
Before this commit:
- The computed field `parent_id` was stored, which caused frequent
  recomputations whenever related records changed.
- This led to unnecessary overhead and performance issues.

After this commit:
- Made `parent_id` non-stored to avoid redundant recomputations.
- Changed `filter_domain` to `filtered` in catalog related controllers
- Add a `compute_sudo` in Accounting to avoid having access error
  in Sale.

task-5009037,4966574

--- a/addons/sale/views/sale_portal_templates.xml
+++ b/addons/sale/views/sale_portal_templates.xml
@@ -751,7 +751,7 @@
                                 <t t-elif="is_subsection">
                                     <t t-set="current_subsection" t-value="line"/>
                                     <t t-set="line_padding" t-value="2"/>
-                                    <t t-set="collapse_prices" t-value="collapse_prices or line.collapse_prices"/>
+                                    <t t-set="collapse_prices" t-value="current_section.collapse_prices or line.collapse_prices"/>
                                 </t>
                                 <t t-else="">
                                     <t
