[IMP] stock_account: unit cost simplify for standard
Unit cost view, show the stock.move for products with standard cost
method. Move are not relevant since the value is only taken from the
product form.

The report view is cleaned in order to only show the product standard
price history (product.value object)

closes odoo/odoo#225081

Related: odoo/enterprise#93678
Signed-off-by: Arnold Moyaux (arm) <arm@odoo.com>

--- a/addons/stock_account/report/stock_avco_audit_report_views.xml
+++ b/addons/stock_account/report/stock_avco_audit_report_views.xml
@@ -8,11 +8,12 @@
                 <field name="product_id"/>
                 <field name="date"/>
                 <field name="description"/>
-                <field name="quantity"/>
-                <field name="value"/>
-                <field name="total_value"/>
-                <field name="total_quantity"/>
-                <field name="avco_value"/>
+                <field name="quantity" column_invisible="context.get('cost_method') == 'standard'"/>
+                <field name="added_value" column_invisible="context.get('cost_method') == 'standard'"/>
+                <field name="value" string="Unit Cost" column_invisible="context.get('cost_method') != 'standard'"/>
+                <field name="total_value" column_invisible="context.get('cost_method') == 'standard'"/>
+                <field name="total_quantity" column_invisible="context.get('cost_method') == 'standard'"/>
+                <field name="avco_value" column_invisible="context.get('cost_method') == 'standard'"/>
             </list>
         </field>
     </record>
