--- a/addons/stock_account/views/product_views.xml
+++ b/addons/stock_account/views/product_views.xml
@@ -65,6 +65,7 @@
                             'action_name': 'stock_account.stock_avco_report_action',
                         }" context="{
                             'active_id': id,
+                            'cost_method': cost_method,
                         }"/>
                     <field
                         name="total_value" string="Total Value" optional="show"
