[IMP] website_sale(,_stock): reintegrate GMC
In [^1], a new feature was introduced to allow users to synchronize
their eCommerce with Google Merchant Center and increase their product
visibility, keep stock status updated, and improve product listings.

However, the initial implementation attempted to include shipping
information in the feed, which required computing rates for every
product, carrier, and country. This quickly became infeasible due to
performance constraints and third-party carrier rate limits, forcing us
to disable the feature [^2].

This commit reintroduces the GMC feed without shipping details, making
it lightweight and reliable. To ensure scalability, we also (i) enforce
a limit of 5000 products per feed, and (ii) introduce a caching
mechanism to avoid recomputing expensive product data (e.g., prices) for
subsequent requests.

task-5049357

[^1]: https://github.com/odoo/odoo/pull/186976
[^2]: https://github.com/odoo/odoo/pull/224649

--- a/addons/website_sale/views/res_config_settings_views.xml
+++ b/addons/website_sale/views/res_config_settings_views.xml
@@ -243,20 +243,22 @@
                     <field name="module_website_sale_collect"/>
                 </setting>
             </block>
-                        <setting id="google_analytics_setting" position="after">
+            <setting id="google_analytics_setting" position="after">
                 <setting
                     id="google_merchant_center_setting"
                     help="Connect your eCommerce via a product file."
-                    documentation="/applications/websites/ecommerce/products/catalog.html#multi-channel-promotion"
-                    invisible="1"
+                    documentation="/applications/websites/ecommerce/google_merchant_center.html"
                 >
-                    <field name="enabled_gmc_src"/>
-                    <field
-                        name="gmc_xml_url"
-                        string="Copy file link"
-                        widget="CopyClipboardButton"
-                        invisible="not enabled_gmc_src"
-                    />
+                    <field name="group_gmc_feed"/>
+                    <div class="mt8" invisible="not group_gmc_feed">
+                        <button
+                            type="object"
+                            name="action_open_product_feeds"
+                            string="Manage feeds"
+                            class="btn-link"
+                            icon="oi-arrow-right"
+                        />
+                    </div>
                 </setting>
             </setting>
         </field>
