--- a/addons/website_sale/views/website_sale_menus.xml
+++ b/addons/website_sale/views/website_sale_menus.xml
@@ -101,6 +101,11 @@
                   groups="base.group_no_one"
                   sequence="100"
         />
+        <menuitem id="menu_product_feeds"
+                  action="website_sale.action_product_feeds"
+                  groups="website_sale.group_product_feed"
+                  sequence="150"
+        />
 
     </menuitem>
 
