--- a/addons/medical_service_management/views/menu.xml
+++ b/addons/medical_service_management/views/menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <!-- 主選單：醫療設備服務管理 -->
+    <!-- 主選單：企業聯絡人管理 -->
     <menuitem id="medical_service_management_menu_root"
-              name="醫療設備服務管理"
+              name="企業聯絡人管理"
               sequence="5"/>
 
     <!-- 聯絡人管理主選單 -->
