[FIX] mail: chevron aligned with category

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -1,10 +1,3 @@
-.o-mail-DiscussSidebar {
-    .o-mail-DiscussSidebarCategory-icon {
-        width: 15px;
-        height: 15px;
-    }
-}
-
 $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 
 .o-mail-DiscussSidebarChannel-container {
@@ -93,7 +86,7 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 
 .o-mail-DiscussSidebarCategory-actions button:not(:hover) {
     .text-success, .text-danger {
-        --color: #{$btn-color}
+        --color: #{$btn-color};
     }
 }
 
