[FIX] mail: opacity of send button matches other composer button on focus
Part-of: odoo/odoo#224976
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -43,7 +43,7 @@
         .o-mail-Composer-input::placeholder {
             opacity: 50%;
         }
-        .o-mail-Composer-mainActions button:not(.active):not(:disabled) {
+        .o-mail-Composer-mainActions button:not(.active) {
             opacity: 50%;
         }
     }
