[FIX] mail: align sidebar actions in sub-threads + small spacing around it
Part-of: odoo/odoo#224976
Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -107,6 +107,10 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
     margin-left: map-get($spacers, 4) + map-get($spacers, 2);
 }
 
+.o-mail-DiscussSidebarChannel-subChannelList {
+    gap: 1px;
+}
+
 .o-mail-DiscussSidebar-unreadIndicator {
     font-size: 0.4rem;
     left: 0px;
